<resources>
    <string name="app_name">Planets</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="pref_cate_title_1">General</string>
    <string name="pref_cate_title_2">Other</string>
    <string name="pref_1">Rate on the Play Store</string>
    <string name="pref_2">Other Apps</string>
    <string name="pref_3">Donate</string>
    <string name="pref_4">Keep Screen Awake</string>
    <string name="sun_image">Picture of Sun</string>
    <string name="mercury_image">Picture of Mercury</string>
    <string name="venus_image">Picture of Venus</string>
    <string name="earth_image">Picture of Earth</string>
    <string name="mars_image">Picture of Mars</string>
    <string name="jupiter_image">Picture of Jupiter</string>
    <string name="saturn_image">Picture of Saturn</string>
    <string name="uranus_image">Picture of Uranus</string>
    <string name="neptune_image">Picture of Uranus</string>
    <string name="button_1">Source</string>
    <string name="button_2">Source</string>
    <string name="button_3">Source</string>
    <string name="button_4">Source</string>
    <string name="button_5">Source</string>
    <string name="button_6">Source</string>
    <string name="button_7">Source</string>
    <string name="button_8">Source</string>
    <string name="button_9">Source</string>
    <string name="earth_satellite">Satellite (1)</string>
    <string name="venus_title">Venus</string>
    <string name="venus_sub_title_1">Specific Information:</string>
    <string name="venus_description">Mass: 4,867,320,000,000,000 billion kg (0.815 x Earth)\nEquatorial Diameter: 12,104 km\nPolar Diameter: 12,104 km\nEquatorial Circumference: 38,025 km\nKnown Satellites: none\nNotable Satellites: none\nOrbit Distance: 108,209,475 km (0.73 AU)\nOrbit Period: 224.70 Earth days\nSurface Temperature: 462 °C\nFirst Record: 17th century BC\nRecorded By: Babylonian astronomers</string>
    <string name="venus_sub_title_2">General Information:</string>
    <string name="venus_description_2">A day on Venus lasts longer than a year:
It takes 243 Earth days to make rotate once on its axis. The planet’s orbit around the Sun takes 225 Earth days, compared to the Earth’s 365.

Venus is often called the Earth’s sister planet:
Earth and Venus are very similar in size with only a 638 km difference in diameter, Venus having 81.5% of the Earth’s mass. Both also have a central core, a molten mantle and a crust.

Venus rotates counter-clockwise:
Also known as retrograde rotation. A possible reason might be a collision in the past with an asteroid or other object that caused the planet to alter its rotational path. It also differs from most other planets in our solar system by having no natural satellites.

Venus is the second brightest object in the night sky:
Only the Moon is brighter. With a magnitude of between -3.8 to -4.6 Venus is so bright it can be seen during daytime on a clear day.

Atmospheric pressure on Venus is 92 times greater than the Earth’s:
While its size and mass are similar to Earth, the small asteroids are crushed when entering its atmosphere, meaning no small craters lie on the surface of the planet. The pressure felt by a human on the surface would be equivalent to that experienced deep beneath the sea on Earth.

Venus is also known as the Morning Star and the Evening Star:
Early civilisations thought Venus was two different bodies, called Phosphorus and Hesperus by the Greeks, and Lucifer and Vesper by the Romans. This is because when its orbit around the Sun overtakes Earth’s orbit, it changes from being visible after sunset to being visible before sunrise. Mayan astronomers made detailed observations of Venus as early as 650 AD.

Venus is the hottest planet in our solar system:
The average surface temperature is 462 °C, and because Venus does not tilt on its axis, there is no seasonal variation. The dense atmosphere of around 96.5 percent carbon dioxide traps heat and causes a greenhouse effect.

A detailed study of Venus is currently underway:
In 2006, the Venus Express space shuttle was sent into orbit around Venus by the European Space Agency, and is sending back information about the planet. Originally planned to last five hundred Earth days, the mission has been extended several times. More than 1,000 volcanoes or volcanic centres larger than 20 km have been found on the surface of Venus.

The Russians sent the first mission to Venus:
The Venera 1 space probe was launched in 1961, but lost contact with base. The USA also lost their first probe to Venus, Mariner 1, although Mariner 2 was able to take measurements of the planet in 1962. The Soviet Union’s Venera 3 was the first man-made craft to land on Venus in 1966.

At one point it was thought Venus might be a tropical paradise:
The dense clouds of sulphuric acid surrounding Venus make it impossible to view its surface from outside its atmosphere. It was only when radio mapping was developed in the 1960s that scientists were able to observe and measure the extreme temperatures and hostile environment. It is thought Venus did once have oceans but these evaporated as the planets temperature increased</string>
    <string name="earth_title">Earth</string>
    <string name="earth_sub_title_1">Specific Information:</string>
    <string name="earth_description">Mass: 5,972,190,000,000,000 billion kg\nEquatorial Diameter: 12,756 km\nPolar Diameter: 12,714 km\nEquatorial Circumference: 40,030 km\nKnown Satellites: 1\nNotable Satellites: The Moon\nOrbit Distance: 149,598,262 km (1 AU)\nOrbit Period: 365.26 Earth days\nSurface Temperature: -88 to 58°C</string>
    <string name="earth_sub_title_2">General Information:</string>
    <string name="earth_description_2">The Earth’s rotation is gradually slowing:
This deceleration is happening almost imperceptibly, at approximately 17 milliseconds per hundred years, although the rate at which it occurs is not perfectly uniform. This has the effect of lengthening our days, but it happens so slowly that it could be as much as 140 million years before the length of a day will have increased to 25 hours.

The Earth was once believed to be the centre of the universe:
Due to the apparent movements of the Sun and planets in relation to their viewpoint, ancient scientists insisted that the Earth remained static, whilst other celestial bodies travelled in circular orbits around it. Eventually, the view that the Sun was at the centre of the universe was postulated by Copernicus and this was eventually shown to be the case.

Earth has a powerful magnetic field:
This phenomenon is caused by the nickel-iron core of the planet, coupled with its rapid rotation. This field protects the Earth from the effects of solar wind.

There is only one natural satellite of the planet Earth:
As a percentage of the size of the body it orbits, the Moon is the largest satellite of any planet in our solar system. In real terms, however, it is only the fifth largest natural satellite.

Earth is the only planet not named after a god:
The other seven planets in our solar system are all named after Roman gods or goddesses. Although only Mercury, Venus, Mars, Jupiter and Saturn were named during ancient times, because they were visible to the naked eye, the Roman method of naming planets was retained after the discovery of Uranus and Neptune.

Of all the planets in our solar system, the Earth has the greatest density:
This varies according to the part of the planet; for example, the metallic core is denser than the crust. The average density of the Earth is approximately 5.52 grams per cubic centimetre.</string>
    <string name="mars_title">Mars</string>
    <string name="mars_sub_title_1">Specific Information:</string>
    <string name="mars_description">Mass: 641,693,000,000,000 billion kg (0.107 x Earth)\nEquatorial Diameter: 6,805\nPolar Diameter: 6,755\nEquatorial Circumference: 21,297 kmKnown Satellites: 2\nNotable Satellites: Phobos and Deimos\nOrbit Distance: 227,943,824 km (1.38 AU)\nOrbit Period: 686.98 Earth days (1.88 Earth years)\nSurface Temperature: -87 to -5 °C\nFirst Record: 2nd millennium BC\nRecorded By: Egyptian astronomers</string>
    <string name="mars_sub_title_2">General Information:</string>
    <string name="mars_description_2" formatted="false">Mars and Earth have approximately the same landmass:
Even though Mars has only has 15% of the Earth’s volume and just over 10% of the Earth’s, around two thirds of the Earths surface is covered in water. Martian surface gravity is only 37% of Earth’s (meaning you could leap nearly three times higher on Mars).

Mars is home to the tallest mountain in the solar system.
Olympus Mons, a shield volcano, is 21km high and 600km in diameter. Despite having formed over billions of years, evidence from volcanic lava flows is so recent many scientists believe it could still be active.

Only 16 missions to Mars have been successful.
Including orbiters, landers and rovers there have been 39 missions to Mars, not including flybys or the attempt to return a sample of Phobos. Since the first, USSR’s Marsnik 1, was launched in 1960. Europe’s Exobiology on Mars program (scheduled launch 2016) plans to: search for possible traces of Martian life; study the surface environment; map potential hazards to manned missions in the future and begin preparations for an eventual return flight.

Mars has the largest dust storms in the solar system:
They can last for months and cover the entire planet on. The seasons are extreme because its elliptical, oval-shaped orbital path around the sun is more elongated than most other planets in the solar system.

On Mars the Sun appears about half the size as it does on Earth:
At the closest point to the Sun, the Martian southern hemisphere leans towards the Sun, causing a short, intensely hot summer, while the northern hemisphere endures a brief, cold winter: at its farthest point from the Sun, the Martian northern hemisphere leans towards the Sun, causing a long, mild summer, while the southern hemisphere endures a lengthy, cold winter.

Pieces of Mars have fallen to Earth:
Scientists have found tiny traces of Martian atmosphere within meteorites violently ejected from Mars, then orbiting the solar system amongst galactic debris for millions of years, before crash landing on Earth. This allowed scientists to begin studying Mars prior to launching space missions.

Mars takes its name from the Roman god of war:
The ancient Greeks called the planet Ares, after their god of war; the Romans then did likewise, associating the planet’s blood-red colour with Mars, their own god of war. Interestingly, other ancient cultures also focused on colour – to China’s astronomers it was ‘the fire star’, whilst Egyptian priests called on ‘Her Desher’, or ‘the red one’. The red colour Mars is known for is due to the rock and dust covering its surface being rich in iron.</string>
    <string name="saturn_title">Saturn</string>
    <string name="saturn_sub_title_1">Specific Information:</string>
    <string name="saturn_description">Mass: 568,319,000,000,000,000 billion kg (95.16 x Earth)\nEquatorial Diameter: 120,536 km\nPolar Diameter: 108,728 km\nEquatorial Circumference: 365,882 km\nKnown Satellites: 62\nNotable Satellites: Titan, Rhea and Enceladus\nOrbit Distance: 1,426,666,422 km (9.58 AU)\nOrbit Period: 10,755.70 Earth days (29.45 Earth years)\nSurface Temperature: -139 °C\nFirst Record: 8th century BC\nRecorded By: Assyrians</string>
    <string name="saturn_sub_title_2">General Information:</string>
    <string name="saturn_description_2" formatted="false">Saturn is the sixth planet from the Sun and is named after the Roman god of wealth. Saturn is the second largest planet in the solar system and is best known for its fabulous rings. The rings were not known to exist until Galileo first observed them in 1610.</string>
</resources>