<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.andrewq.planets.FragmentE" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/mars_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/mars_title"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/mars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mars_title"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/mars_image"
                android:src="@drawable/mars" />

            <TextView
                android:id="@+id/mars_sub_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mars"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="4dp"
                android:text="@string/mars_sub_title_1"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/mars_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mars_sub_title_1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/mars_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mars_sub_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mars_description"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/mars_sub_title_2"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/mars_description_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mars_sub_title_2"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/mars_description_2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mars_description_2"
                android:layout_centerHorizontal="true"
                android:text="@string/button_5" />
        </RelativeLayout>
    </FrameLayout>

</ScrollView>