<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.andrewq.planets.FragmentG" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/saturn_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/saturn_title"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/saturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saturn_title"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/saturn_image"
                android:src="@drawable/saturn" />

            <TextView
                android:id="@+id/saturn_sub_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saturn"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="4dp"
                android:text="@string/saturn_sub_title_1"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/saturn_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saturn_sub_title_1"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/saturn_description"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/saturn_sub_title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/saturn_description"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/saturn_sub_title_2"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/saturn_description_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saturn_sub_title_2"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/saturn_description_2"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/saturn_description_2"
                android:layout_centerHorizontal="true"
                android:text="@string/button_7" />
        </RelativeLayout>
    </FrameLayout>

</ScrollView>